Added new reference complete for now. Persistence background task not finishing properly

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,15 @@
 spring.mandatory-file-encoding=UTF-8
 spring.main.web-environment=false
 
-spring.jpa.hibernate.show_sql=true
-spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.dialect=org.hibernate.dialect.DerbyTenSevenDialect
+##
+## No database! All data stored in a refy.json file
+##
 
-spring.datasource.platform=derby
-spring.datasource.continue-on-error=true
-spring.datasource.username=APP
-spring.datasource.url=jdbc:derby:/Users/jonydog/refydbx
-spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
+#spring.jpa.hibernate.show_sql=true
+#spring.jpa.hibernate.ddl-auto=validate
+
+#spring.datasource.platform=derby
+#spring.datasource.continue-on-error=true
+#spring.datasource.username=APP
+#spring.datasource.url=jdbc:derby:C:/Users/Lenovo/derbyrefy
+#spring.datasource.driver-class-name=org.apache.derby.jdbc.EmbeddedDriver
