--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,33 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.jonydog</groupId>
     <artifactId>refy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>2.0</version>
+    <packaging>jar</packaging>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.6.RELEASE</version>
+        <version>2.0.6.RELEASE</version>
         <relativePath />
     </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>2.0.6.RELEASE</version>
+                <configuration>
+                    <mainClass>com.jonydog.refy.app.MainApp</mainClass>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -60,6 +80,7 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
+            <version>6.0.13.Final</version>
             <exclusions>
                 <exclusion>
                     <groupId>dom4j</groupId>
