Changed fxml files reading mechanism in order for the executable jar to run properly on its own

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.mandatory-file-encoding=UTF-8
 spring.main.web-environment=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
+refy.working-mode=JAR
+
 #
 ## No database! All data stored in a refy.json file
 ##
