Nudge4J now only starts when application is working in JAR mode

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.mandatory-file-encoding=UTF-8
 spring.main.web-environment=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration, org.springframework.boot.autoconfigure.orm.jpa.HibernateJpaAutoConfiguration
 
+## possible values: JAR, IDE
 refy.working-mode=JAR
 
 #
